# py-kz-validators

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  setup.py
kz/validators/: __init__.py  _iin_validator.py
tests/: test_iin_validator.py
