[project]
name = "kz-py-validators"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",

  "flake8",
  "flake8-print",
  "flake8-multiline-containers",
  "flake8-builtins",
  "flake8-import-order",
  "flake8-commas",
  "flake8-quotes",
]

[tool.black]
line-length=120
target-version=['py310']
skip-string-normalization=true
